# celery_fastapi_react

./: .gitignore  README.md  docker-compose.yml
celery_rabbitmq/: Dockerfile  README.md  celery_rabbitmq_task.py  pyproject.toml
celery_rabbitmq/tests/: celery_rabbitmq_task_test.py
celery_tasks/: README.md  celery_client.py  celery_task.py  pyproject.toml
celery_tasks/tests/: celery_task_test.py
fast_api/: Dockerfile  README.md  database.py  main.py  pyproject.toml
fast_api/celery_tasks/: celery_endpoints.py  models.py  schema.py
fast_api/celery_tasks/tests/: celery_endpoints_test.py
react_app/: Dockerfile
react_app/src/: App.css  App.js
